# lesearch

./: Cargo.toml  README.md
.github/workflows/: packages.yml
les/: Cargo.toml
les/src/: main.rs
les_core/: Cargo.toml
les_core/src/: lib.rs
lesd/: Cargo.toml
lesd/src/: main.rs
packaging/appimage/: build_appimage.sh
packaging/deb/: build_deb.sh
packaging/systemd/: lesd.service
src/: main.rs
